# AIM_IBM_KGO

./: .gitignore  README.md  edges_test.txt  get_property.py  htmlexample.html  kgo.py  main.py  props_test.txt  simple_mat.nt  simple_mat.py  simple_mat2.dot  simple_mat2.nt  user-config.py
database/: CMakeLists.txt  Doxyfile  daemon.cpp  graph.cpp  graph.hpp  graph_deterministic.cpp  graph_test  graph_test.cpp  interface.py  parse.cpp  parse.hpp  parse_TEST.cpp  utility.hpp
interface/: Makefile  interface.py  server.cpp
rdflib_testing/: simple_mat.dot  simple_mat2.dot  simple_mat2.nt
scraper/: bidirectionalize_graph.py  freebase_tool.py  full_graph_to_dotfile.py  garbage_ids.txt  get_data_for_dangling_nodes.py  main.py  rewire_graph.py  scrape_from_freebase.py  scrape_tools.py  serialization_helpers.py  serialization_helpers_TEST.py
web/: index.html
